feat(client): add KV client SDK and CLI
- Add KVServiceImpl for handling client requests
- Add RaftKVClient with auto leader discovery and retry
- Add RaftCli command-line tool
- Add KVClientTest integration tests
- Update README with client usage examples

Closes #6